--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.url = jdbc:mysql://bx4ax6qhrd8nczw0cnxk-mysql.services.clever-cloud.com:3306/bx4ax6qhrd8nczw0cnxk?useSSL=false
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver 
+spring.datasource.username = uzvdz7cp6lmqb0xr
+spring.datasource.password = LtfYCQx6ehCsKQaxBR3O
+
+# génération des tables en base de données
+spring.jpa.generate-ddl=true
+spring.datasource.tomcat.max-active=2
+spring.datasource.tomcat.max-idle=2
+spring.datasource.tomcat.test-on-borrow=true
+spring.datasource.tomcat.validationQuery=SELECT 1
+
+# security
+jwt.cookie=AUTH-TOKEN
+jwt.expires_in=86400
+jwt.secret=SecretKeyToGenJWTs
+
 
